@@ -19,12 +19,18 @@
 
 /*
  * Used to pad structures at size'd boundaries
+ *
+ * This macro assumes that the pointer 'buffer' was created from an
+ * aligned pointer by adding the 'length'. If this 'length' was not a
+ * multiple of the 'size' the result is unaligned and PadBuffer
+ * corrects both the pointer, _and_ the 'length'. The latter means
+ * that future increments of 'buffer' by 'length' stay aligned.
  */
 
-#define PadBuffer(buffer, length, size)         \
-    if (((length) % (size))) {                  \
-	(buffer) += ((length) % (size));        \
-	(length) += ((length) % (size));        \
+#define PadBuffer(buffer, length, size)             \
+    if (((length) % (size))) {                      \
+	(buffer) += ((size) - ((length) % (size))); \
+	(length) += ((size) - ((length) % (size))); \
     }
 
 /*
